# Paroles

./: main.py  parameters.json  pyproject.toml
API/: API.py
GUI/: main.py  main_page.py  parameters.json  parameters.py
GUI/views/: autre.py  main_page.py  parameters.py
TEST/: TEST.py
paroles.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
